# clubmanager365cli

./: .dockerignore  .gitignore  Dockerfile  README.md  credentials.env.example  pyproject.toml
cm365/: __init__.py  bookings.py  cli.py  client.py  config.py  mcp_server.py
